add deliver shipment handler
